Bug 152317 - macOS: Dark Mode: Calc: Highlighted sheet name unreadable
Summary: macOS: Dark Mode: Calc: Highlighted sheet name unreadable
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: macOS-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-11-30 15:25 UTC by steve
Modified: 2022-12-01 10:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
LO sheet name unreradable (13.37 KB, image/png)
2022-11-30 15:25 UTC, steve
Details
Apple Numbers using accent color for selected sheet (39.84 KB, image/png)
2022-11-30 15:26 UTC, steve
Details
fixed (14.78 KB, image/png)
2022-12-01 10:52 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2022-11-30 15:25:13 UTC
Description:
With dark mode enabled the highlighted sheet name is unreadable (see screenshot).

Currently: White font on white background.
Expected: Whilte font on accent color background (macOS specific thing sec in System Settings > Appearance > Accent color. 

Steps to Reproduce:
see description

Actual Results:
see description

Expected Results:
see description


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: fe845e40ab23a3fa9fd401498edf925b7b00776f
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2022-11-30 15:25:37 UTC
Created attachment 183915 [details]
LO sheet name unreradable
Comment 2 steve 2022-11-30 15:26:05 UTC
Created attachment 183916 [details]
Apple Numbers using accent color for selected sheet
Comment 3 Sierk Bornemann 2022-11-30 15:50:06 UTC
I can confirm the issue in question.

Version: 7.5.0.0.alpha1+ (AARCH64) / LibreOffice Community
Build ID: 98d8adc5b377039d5dee0d5046ece721010a960c
CPU threads: 10; OS: Mac OS X 13.0.1; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 4 Commit Notification 2022-11-30 21:20:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d7c622a9159ae17eb80bd4f0f9a865bd29deae1

Resolves: tdf#152317 macOS Calc highlighted sheet name unreadable

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 steve 2022-12-01 10:51:44 UTC
Although no using accent color, this issue here is reslved. Thanks Caolán.

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ce60a3dd4dbff0dcb5b82c9053ae5d90f8ac929d
CPU threads: 8; OS: Mac OS X 13.0.1; UI render: default; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 6 steve 2022-12-01 10:52:18 UTC
Created attachment 183938 [details]
fixed