Resolves: tdf#152317 macOS Calc highlighted sheet name unreadable

Change-Id: Ib6af275b055dbfdcce615df5de61cb2233b8797c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143509
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>